added clients for individual therapy

--- a/src/views/partials/clientnav.ejs
+++ b/src/views/partials/clientnav.ejs
@@ -1,5 +1,5 @@
 <div class="row">  
-    <div class="col"><a class="btn button client-nav-button <%= (locals.contract)?'active':'' %>" href="/clients_contract">Contract</a></div>
+    <div class="col"><a class="btn button client-nav-button <%= (locals.individuals)?'active':'' %>" href="/clients_individuals">Individuals</a></div>
     <div class="col"><a class="btn button client-nav-button <%= (locals.trainee)?'active':'' %>" href="/clients_low_cost_trainees">Low Cost Trainee Therapist</a></div>
     <div class="col"><a class="btn button client-nav-button <%= (locals.precred)?'active':'' %>" href="/clients_low_cost_precreds">Low Cost Precred Therapist</a></div>
     <div class="col"><a class="btn button client-nav-button <%= (locals.couples)?'active':'' %>" href="/clients_couples_families">Couples/Families</a></div>
