Added supervision sessions functionality

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -281,6 +281,11 @@ i.bi {
 	color: var(--bs-gray-500) !important;
 }
 
+.attendance-error {
+	color: var(--bs-danger);
+	font-weight: bold;
+}
+
 /**
  * Toggle switch
  */
