--- a/src/views/partials/sidebar.ejs
+++ b/src/views/partials/sidebar.ejs
@@ -126,6 +126,36 @@ pathCorrection = locals.pathCorrection; %> <% } %>
 		>
 	</li>
 
+	<!-- Divider -->
+	<hr class="sidebar-divider" />
+
+	<div class="sidebar-heading">Supervision</div>
+
+
+	<!-- Nav Item - View Supervision Session List-->
+	<li class="nav-item">
+		<a
+			class="nav-link"
+			href="/supervisionsessionlist"
+		>
+			<i class="bi bi-person-lines-fill"></i>
+			<span>View Sessions</span></a
+		>
+	</li>
+
+	<!-- Nav Item - Add Supervision Session -->
+	<li class="nav-item">
+		<a
+			class="nav-link"
+			href="/addsupervisionsession"
+		>
+			<i class="bi bi-person-fill-check"></i>
+			<span>Add Session</span></a
+		>
+	</li>
+
+	
+
 	<hr class="sidebar-divider" />
 
 	<!-- Heading -->
@@ -139,9 +169,11 @@ pathCorrection = locals.pathCorrection; %> <% } %>
 			href="/referrals"
 		>
 			<i class="bi bi-chevron-double-right"></i>
-			<span>Renter Referral</span></a
+			<span>Renter Referrals</span></a
 		>
 	</li>
+	
+	<hr class="sidebar-divider" />
 	
 	<!-- Nav Item - Profit per Therapist -->
 	<li class="nav-item">
