--- a/src/views/partials/sidebar.ejs
+++ b/src/views/partials/sidebar.ejs
@@ -57,7 +57,9 @@ pathCorrection = locals.pathCorrection; %> <% } %>
 		>
 			<i class="bi bi-calendar3"></i>
 			<span>Appointments</span>
-		</a>
+			
+		</a>&nbsp;
+		<a href="/newappointment" class="nav-link"><i class="bi bi-plus-circle"></i></a>
 	</li>
 
 	<hr class="sidebar-divider" />
