--- a/src/views/partials/sidebar.ejs
+++ b/src/views/partials/sidebar.ejs
@@ -18,7 +18,7 @@ pathCorrection = locals.pathCorrection; %> <% } %>
 				width="46"
 			/>
 		</div>
-		<div class="sidebar-brand-text mx-3"></div>
+		<div class="sidebar-brand-text mx-3 saoirse">Saoirse</div>
 	</a>
 
 	<!-- Divider -->
