--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Agbalumo");
+
 body {
 	font-family: Arial, Helvetica, sans-serif;
 }
@@ -44,6 +46,10 @@ label {
 	text-decoration: underline;
 }
 
+.saoirse {
+	font-family: "Agbalumo";
+	font-size: 1.8em !important;
+}
 .view-single {
 	text-align: right;
 }
