--- a/src/views/templates/template.ejs
+++ b/src/views/templates/template.ejs
@@ -113,7 +113,10 @@
 			<%-include('../partials/footer.ejs') %> <% } %>
 
 			<!--  end #wrapper -->
+			
 		</div>
 			<div id="theModal"	class="modal"></div>
+
+			<div id="toTop"><i class="bi bi-arrow-up-circle"></i></div>
 	</body>
 </html>
