--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -639,9 +639,19 @@ thead th {
 	width: 30px;
 	height: 30px;
 	border-radius: 50%;
-	font-size: 0;
-	vertical-align: middle;
+	font-size: 0.8em;
+	color: #fff;
+	cursor: pointer;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	padding: 0 4px;
 }
+
+.colour-circle:hover {
+	color: var(--bs-primary-bg-subtle);
+}
+
 .colour-circle-sm {
 	width: 20px;
 	height: 20px;
@@ -767,6 +777,28 @@ i.bi.bi-cash {
 
 .toggle > .toggle-group > .btn {
 	padding-top: 0.8rem;
+}
+
+#toTop {
+	position: fixed;
+	right: 1.5vw;
+	bottom: 0;
+	cursor: pointer;
+}
+
+.appointment-cancelled {
+	margin-bottom: 40px;
+	border-bottom: 1px solid var(--bs-primary);
+	padding-bottom: 40px;
+}
+
+.alert {
+	margin: 40px 0;
+}
+.alert button:hover {
+	color: #fff;
+	border-color: #000;
+	background-color: var(--bs-danger-text-emphasis) !important;
 }
 
 /* SPINNER SPINNER */
