--- a/src/views/pages/viewavailability.ejs
+++ b/src/views/pages/viewavailability.ejs
@@ -35,6 +35,9 @@
     </div>    
 </div>
 
+<div class=" d-flex justify-content-end align-items-center">
+<a href="/therapist/<%=therapist.t_ID%>" class="btn button btn-primary back">Back to <%= therapist.t_first_name + ' ' + therapist.t_surname %></a>
+</div>
 
 
 
